unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Current_TF_Issuing_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_TF_Issuing_Solution__c</fullName>
    <inlineHelpText>Which kind of system is currently being used to issue Tax Free forms?</inlineHelpText>
    <label>Current TF Issuing Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stand Alone</fullName>
            </value>
            <value>
                <fullName>Online Terminal</fullName>
            </value>
            <value>
                <fullName>Tablet Solution</fullName>
            </value>
            <value>
                <fullName>Online Web-based</fullName>
            </value>
            <value>
                <fullName>Integrated Solution</fullName>
            </value>
            <value>
                <fullName>Semi-integrated Solution PII</fullName>
            </value>
            <value>
                <fullName>Other/Unknown</fullName>
            </value>
            <value>
                <fullName>Manual Forms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>