unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Current_TF_Issuing_SolutionR__c.field-meta.xml
<CustomField>
    <fullName>Current_TF_Issuing_SolutionR__c</fullName>
    <formula>IF(TEXT(Current_TF_Issuing_Solution__c) = &quot;Stand Alone&quot;, 2,
IF(TEXT(Current_TF_Issuing_Solution__c) = &quot;Online Terminal&quot;, 3, 
IF(TEXT(Current_TF_Issuing_Solution__c) = &quot;Tablet&quot;, 4, 
IF(TEXT(Current_TF_Issuing_Solution__c) = &quot;Online Web-based&quot;, 3, 
IF(TEXT(Current_TF_Issuing_Solution__c) = &quot;Integrated Solution&quot;, 5,
IF(TEXT(Current_TF_Issuing_Solution__c) = &quot;Other/Unknown&quot;, 3,
IF(TEXT(Current_TF_Issuing_Solution__c) = &quot;Manual Forms&quot;, 0.1, 0)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current TF Issuing SolutionR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>