unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Customer_Experience_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Subtotal__c</fullName>
    <formula>Percent_of_Business_from_non_EUR__c +  Tailored_Customer_ExperienceR__c +  Supported_by_Tax_Free_ProviderR__c +  Lifetime_Value_ApproachR__c +  Cultural_Sales_and_Service_ModelR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Experience Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>