unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Customer_Experience_Total__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Total__c</fullName>
    <label>Customer Experience Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>