unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Customer_Journey_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey_Subtotal__c</fullName>
    <formula>Pre_Shopping_JourneyR__c +  Guided_to_Store_via_Digital_AppR__c +  Clear_That_Store_Provides_Tax_FreeR__c +  Happy_with_In_Store_Customer_JourneyR__c +  Seamless_TF_Experience_at_CounterR__c +  Automated_Tax_Free_ProcessR__c +  Tourists_Educated_by_StaffR__c +  Ease_of_Receiving_RefundR__c +  How_Many_Refund_OptionsR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Journey Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>