unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Customisation_on_TF_Form__c.field-meta.xml
<CustomField>
    <fullName>Customisation_on_TF_Form__c</fullName>
    <inlineHelpText>Is there any special customization on the Tax-Free form (e.g. brand logo)?</inlineHelpText>
    <label>Customisation on TF Form?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>