unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Customisation_on_TF_FormR__c.field-meta.xml
<CustomField>
    <fullName>Customisation_on_TF_FormR__c</fullName>
    <formula>IF(TEXT(Customisation_on_TF_Form__c) = &quot;Yes&quot;, 5,
IF(TEXT(Customisation_on_TF_Form__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customisation on TF FormR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>