unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Data_Mandated_by_TF_Provider__c.field-meta.xml
<CustomField>
    <fullName>Data_Mandated_by_TF_Provider__c</fullName>
    <inlineHelpText>What data is mandated by TF provider to be captured at POS?</inlineHelpText>
    <label>Data Mandated by TF Provider at POS?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Name</fullName>
            </value>
            <value>
                <fullName>Last Name</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Passport Number</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>