unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/DCC_Offer_Message__c.field-meta.xml
<CustomField>
    <fullName>DCC_Offer_Message__c</fullName>
    <label>DCC Offer Message on Touch Screen?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Flags</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>