unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/DCC_Service_Available__c.field-meta.xml
<CustomField>
    <fullName>DCC_Service_Available__c</fullName>
    <label>DCC Service Available?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>