unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/DCC_Service_AvailableR__c.field-meta.xml
<CustomField>
    <fullName>DCC_Service_AvailableR__c</fullName>
    <formula>IF(TEXT(DCC_Service_Available__c) = &quot;Yes&quot;, 5, 
IF(TEXT(DCC_Service_Available__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC Service AvailableR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>