unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Desired_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Desired_Improvements__c</fullName>
    <inlineHelpText>Are there improvements you would make to improve your overall Tax-Free Issuing solution?</inlineHelpText>
    <label>Desired Improvements?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>