unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Do_you_pay_for_Marketing_Support__c.field-meta.xml
<CustomField>
    <fullName>Do_you_pay_for_Marketing_Support__c</fullName>
    <label>Do you pay for Marketing Support?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>