unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Do_you_pay_for_Marketing_SupportR__c.field-meta.xml
<CustomField>
    <fullName>Do_you_pay_for_Marketing_SupportR__c</fullName>
    <formula>IF(TEXT(Do_you_pay_for_Marketing_Support__c) = &quot;Yes&quot;, 0, 
IF(TEXT(Do_you_pay_for_Marketing_Support__c) = &quot;No&quot;, 5, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do you pay for Marketing SupportR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>