unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/E_commerce_Solution__c.field-meta.xml
<CustomField>
    <fullName>E_commerce_Solution__c</fullName>
    <inlineHelpText>E-commerce Solution (click and collect)? Available for Tax Free?</inlineHelpText>
    <label>E-commerce Solution Available for TF?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - No Tax Free</fullName>
            </value>
            <value>
                <fullName>Yes - Tax Free</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>