unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Ease_of_Receiving_Refund__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Receiving_Refund__c</fullName>
    <inlineHelpText>How easy is it for the customer to receive their refund once they leave your store?</inlineHelpText>
    <label>Ease of Receiving Refund?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Effort</fullName>
            </value>
            <value>
                <fullName>Very Easy</fullName>
            </value>
            <value>
                <fullName>Moderately Easy</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Very Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>