unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Ease_of_Receiving_RefundR__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Receiving_RefundR__c</fullName>
    <formula>IF(TEXT(Ease_of_Receiving_Refund__c) = &quot;No Effort&quot;, 5, 
IF(TEXT(Ease_of_Receiving_Refund__c) = &quot;Very Easy&quot;, 4, 
IF(TEXT(Ease_of_Receiving_Refund__c) = &quot;Moderately Easy&quot;, 3, 
IF(TEXT(Ease_of_Receiving_Refund__c) = &quot;Average&quot;, 2, 
IF(TEXT(Ease_of_Receiving_Refund__c) = &quot;Difficult&quot;, 1, 
IF(TEXT(Ease_of_Receiving_Refund__c) = &quot;Very Difficult&quot;, 0, 0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ease of Receiving RefundR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>