unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Easy_to_Input_Text_Based_Data__c.field-meta.xml
<CustomField>
    <fullName>Easy_to_Input_Text_Based_Data__c</fullName>
    <inlineHelpText>If digital country, does the solution make it easy to input text based data?</inlineHelpText>
    <label>Easy to Input Text-Based Data?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Digital Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>