unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Effective_Achieving_After_Sales__c.field-meta.xml
<CustomField>
    <fullName>Effective_Achieving_After_Sales__c</fullName>
    <inlineHelpText>Are you effective in achieving after sales from your tourists?</inlineHelpText>
    <label>Effective Achieving After Sales?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>