unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Effective_Achieving_After_SalesR__c.field-meta.xml
<CustomField>
    <fullName>Effective_Achieving_After_SalesR__c</fullName>
    <formula>IF(TEXT(Effective_Achieving_After_Sales__c) = &quot;Yes&quot;, 5,
IF(TEXT(Effective_Achieving_After_Sales__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Achieving After SalesR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>