unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Effective_at_Driving_Footfall__c.field-meta.xml
<CustomField>
    <fullName>Effective_at_Driving_Footfall__c</fullName>
    <inlineHelpText>Is your Tax-Free provider effective in driving Footfall to the Retailers stores?</inlineHelpText>
    <label>Effective at Driving Footfall?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>