unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Effective_at_Driving_FootfallR__c.field-meta.xml
<CustomField>
    <fullName>Effective_at_Driving_FootfallR__c</fullName>
    <formula>IF(TEXT(Effective_at_Driving_Footfall__c) = &quot;Yes&quot;, 5,
IF(TEXT(Effective_at_Driving_Footfall__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective at Driving FootfallR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>