unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Effective_Driver_of_Tourist__c.field-meta.xml
<CustomField>
    <fullName>Effective_Driver_of_Tourist__c</fullName>
    <inlineHelpText>How effective is your Current Tax-Free Provider at helping you drive Touristic Retail Sales?</inlineHelpText>
    <label>Effective Driver of Tourist Sales?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Effective</fullName>
            </value>
            <value>
                <fullName>Moderately Effective</fullName>
            </value>
            <value>
                <fullName>Not Very Effective</fullName>
            </value>
            <value>
                <fullName>Not Effective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>