unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Effective_Driver_of_Tourist_SalesR__c.field-meta.xml
<CustomField>
    <fullName>Effective_Driver_of_Tourist_SalesR__c</fullName>
    <formula>IF(TEXT(Effective_Driver_of_Tourist__c) = &quot;Very Effective&quot;, 5, 
IF(TEXT(Effective_Driver_of_Tourist__c) = &quot;Moderately Effective&quot;, 3,
IF(TEXT(Effective_Driver_of_Tourist__c) = &quot;Not Very Effective&quot;, 2,
IF(TEXT(Effective_Driver_of_Tourist__c) = &quot;Not Effective&quot;, 1, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Driver of Tourist SalesR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>