unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Effective_Marketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Effective_Marketing_Strategy__c</fullName>
    <inlineHelpText>Is your current marketing strategy effective at driving Footfall to your store?</inlineHelpText>
    <label>Effective Marketing Strategy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>