unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Effective_Marketing_StrategyR__c.field-meta.xml
<CustomField>
    <fullName>Effective_Marketing_StrategyR__c</fullName>
    <formula>IF(TEXT(Effective_Marketing_Strategy__c) = &quot;Yes&quot;, 5,
IF(TEXT(Effective_Marketing_Strategy__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Marketing StrategyR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>