unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Embedded_into_Store_s_Payment_System__c.field-meta.xml
<CustomField>
    <fullName>Embedded_into_Store_s_Payment_System__c</fullName>
    <inlineHelpText>Is current TF solution embedded into store&#39;s payment system?</inlineHelpText>
    <label>Embedded into Store&#39;s Payment System?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>