unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Establish_Customer_Eligible_Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Establish_Customer_Eligible_Tax_Free__c</fullName>
    <inlineHelpText>Staff clearly establish that customer is eligible for Tax Free?</inlineHelpText>
    <label>Establish Customer Eligible Tax Free?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>