unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Fast_Refund_Which_Eligible_Cards__c.field-meta.xml
<CustomField>
    <fullName>Fast_Refund_Which_Eligible_Cards__c</fullName>
    <inlineHelpText>Fast Refund - Shopper receives refund in 72 hours</inlineHelpText>
    <label>Fast Refund, Which Eligible Cards?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>