unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Fiscal_Printer_In_Store__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Printer_In_Store__c</fullName>
    <label>Fiscal Printer In Store?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>