unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Fixed_Desktop_or_Mobile_Terminals__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Desktop_or_Mobile_Terminals__c</fullName>
    <inlineHelpText>If Standalone - Fixed Desktop or Mobile Terminals?</inlineHelpText>
    <label>Fixed Desktop or Mobile Terminals?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Desktop</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Not Standalone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>