unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Footfall_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Footfall_Subtotal__c</fullName>
    <formula>Effective_at_Driving_FootfallR__c +  Effective_Driver_of_Tourist_SalesR__c +  Effective_Marketing_StrategyR__c +  Effective_Achieving_After_SalesR__c +  TF_Provider_Support_for_After_SalesR__c +  Tax_Free_Provider_RatingR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Footfall Subtotal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>