unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Guide_Customers_to__c.field-meta.xml
<CustomField>
    <fullName>Guide_Customers_to__c</fullName>
    <inlineHelpText>Do they actively guide customers to City Centre lounge?</inlineHelpText>
    <label>Guide Customers to City Centre Lounge?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>