unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Guided_to_Store_via_Digital_App__c.field-meta.xml
<CustomField>
    <fullName>Guided_to_Store_via_Digital_App__c</fullName>
    <inlineHelpText>Are Tourists Guided to your Store in any way via Digital App etc?</inlineHelpText>
    <label>Guided to Store via Digital App?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>