unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Guided_to_Store_via_Digital_AppR__c.field-meta.xml
<CustomField>
    <fullName>Guided_to_Store_via_Digital_AppR__c</fullName>
    <formula>IF(TEXT(Guided_to_Store_via_Digital_App__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Guided_to_Store_via_Digital_App__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guided to Store via Digital AppR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>