unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Happy_with_In_Store_Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Happy_with_In_Store_Customer_Journey__c</fullName>
    <inlineHelpText>On entering your Store, are you happy with the &#39;In-Store Customer Journey&#39;?</inlineHelpText>
    <label>Happy with In-Store Customer Journey?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>