unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Happy_with_In_Store_Customer_JourneyR__c.field-meta.xml
<CustomField>
    <fullName>Happy_with_In_Store_Customer_JourneyR__c</fullName>
    <formula>IF(TEXT(Happy_with_In_Store_Customer_Journey__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Happy_with_In_Store_Customer_Journey__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Happy with In-Store Customer JourneyR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>