unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Help_Customer_Better_Understand_TF__c.field-meta.xml
<CustomField>
    <fullName>Help_Customer_Better_Understand_TF__c</fullName>
    <inlineHelpText>In your opinion, is there any specific service/ material that would help customers have a better understanding of Tax Free?</inlineHelpText>
    <label>Help Customers Better Understand TF?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>