unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/High_Value_Contactless__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Contactless__c</fullName>
    <label>High Value Contactless?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>