unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Historic_Sales_Reports__c.field-meta.xml
<CustomField>
    <fullName>Historic_Sales_Reports__c</fullName>
    <inlineHelpText>Do you receive historic sales reports, which allow you to set weekly targets and plan quarterly and weekly activity?</inlineHelpText>
    <label>Historic Sales Reports?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>