unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/Historic_Sales_ReportsR__c.field-meta.xml
<CustomField>
    <fullName>Historic_Sales_ReportsR__c</fullName>
    <formula>IF(TEXT(Historic_Sales_Reports__c) = &quot;Yes&quot;, 5, 
IF(TEXT(Historic_Sales_Reports__c) = &quot;No&quot;, 0, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Historic Sales ReportsR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>