unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/How_Are_Customer_Details_Entered__c.field-meta.xml
<CustomField>
    <fullName>How_Are_Customer_Details_Entered__c</fullName>
    <label>How Are Customer Details Entered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entered in CRM</fullName>
            </value>
            <value>
                <fullName>Entered in Tax Free Interface</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>