unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/How_Are_Customer_Details_EnteredR__c.field-meta.xml
<CustomField>
    <fullName>How_Are_Customer_Details_EnteredR__c</fullName>
    <formula>IF(TEXT(How_Are_Customer_Details_Entered__c ) = &quot;Entered in CRM&quot;, 3,
IF(TEXT(How_Are_Customer_Details_Entered__c ) = &quot;Entered in Tax Free Interface&quot;, 5,
IF(TEXT(How_Are_Customer_Details_Entered__c ) = &quot;Not Available&quot;, 0, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How Are Customer Details EnteredR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>