unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/How_Many_Refund_Options__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Refund_Options__c</fullName>
    <inlineHelpText>How many Options do your Tourists have to get their refunds?</inlineHelpText>
    <label>How Many Refund Options?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>More Than 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>