unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/How_Many_Refund_OptionsR__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Refund_OptionsR__c</fullName>
    <formula>IF(TEXT(How_Many_Refund_Options__c) = &quot;1&quot;, 0, 
IF(TEXT(How_Many_Refund_Options__c) = &quot;2&quot;, 1,
IF(TEXT(How_Many_Refund_Options__c) = &quot;3&quot;, 2,
IF(TEXT(How_Many_Refund_Options__c) = &quot;4&quot;, 3,
IF(TEXT(How_Many_Refund_Options__c) = &quot;5&quot;, 4,
IF(TEXT(How_Many_Refund_Options__c) = &quot;More than 5&quot;, 5, 0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How Many Refund OptionsR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>