unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/How_often__c.field-meta.xml
<CustomField>
    <fullName>How_often__c</fullName>
    <label>How often?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>No Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>