unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/How_OftenR__c.field-meta.xml
<CustomField>
    <fullName>How_OftenR__c</fullName>
    <formula>IF(TEXT(How_often__c) = &quot;Monthly&quot;, 5, 
IF(TEXT(How_often__c) = &quot;Quarterly&quot;, 3, 
IF(TEXT(How_often__c) = &quot;Yearly&quot;, 1, 
IF(TEXT(How_often__c) = &quot;No Training&quot;, 0, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How OftenR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>