unpackaged/main/default/objects/Diagnostic_Questionnaire__c/fields/If_Fixed__c.field-meta.xml
<CustomField>
    <fullName>If_Fixed__c</fullName>
    <label>If Fixed, IP or PSTN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>PSTN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>